--- a/public/index.html
+++ b/public/index.html
@@ -7,19 +7,36 @@
 	<title>Upload show | Arching Kaos Radio</title>
 
 	<style type="text/css">
-		body, form, label, input, div, a { 
+		body, form, label, div { 
 			margin: auto;
 			padding: 5px;
 			max-width: 100%;
 			text-align: center;
-			color: #000;
+			color: #fff;
 			font-family: sans;
+			background-color: #6e7d8a;
 		}
-		p { text-align: justified; }
-		#pre { text-align: justify; font-size: smaller; font-family: monospace;}
-		hr { width: 100%;}
-		a:visited {color:#000;}
 
+		input {
+			background-color: #fff;	
+			margin: 10px;
+			padding: 7px;
+			border-radius: 7px;
+			width: 300px;
+			text-align: center;
+		}
+
+		label{
+			font-size: larger;
+		}
+
+		a, a:visited {color:#fff;}
+
+		p { text-align: justified; }
+
+		#pre { text-align: justify; font-size: smaller; font-family: monospace;}
+
+		hr { width: 100%;}
 	</style>
 </head>
 <body>
